Fix spacing and tags as requested in CR

--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@
   padding-bottom: 5px;
   font-weight: 700;
   text-align: center;
-  width: 60vw;
+  width: 72vw;
 }
 
 .intro {
@@ -28,7 +28,7 @@
   text-align: center;
   font-size: 20px;
   margin: 0;
-  width: 60vw;
+  width: 80vw;
   line-height: 28px;
   font-weight: 100;
 }
@@ -54,7 +54,7 @@
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
-  padding-top: 10px;
+  padding-top: 5%;
   margin: 0;
 }
 
